[tool.poetry]
name = "lux-chatbot-assistant"
version = "0.1.0"
description = "'Chatbot based on Llama 3.1'"
authors = ["Luis Copete <alonsocopete@outlook.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<3.13"
replicate = "0.31.0"
streamlit = "1.32.0"
streamlit_mic_recorder = "0.0.8"


[tool.poetry.group.dev.dependencies]
pipreqs = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 